fix: make overflow-y: auto for menu; revert p spacing in previous commit

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -223,6 +223,7 @@ button:focus {
   margin-top: 0px;
   max-width: 60%;
   min-width: 300px;
+  overflow-y: auto;
   position: fixed;
   right: 0px;
   z-index: 3;
@@ -346,12 +347,6 @@ button:focus {
 
   img {
     max-width: 100%; // 645.500px;
-  }
-
-  // This to have the plain text area and renderedNote match on empty lines
-  p {
-    margin-block-start: 1.7em;
-    margin-block-end: 1.7em;
   }
 
   table {
